fix: use margin instead of padding on mobile menu

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ a:hover {
 
     .menu-toggle {
         display: block;
-        padding-right: 2rem;
+        margin-right: 2rem;
     }
 
     .qr-link-wrapper {
